test/invalid-semantics/57163_state_alteration_inside_print/state_alteration_inside_print.mag
-- Author: 57163, Guilherme Dias

const n : Int = 10
const loop : Unit = while n > 0 do print(n = n - 1) 
